--- a/config/74/nginx.conf
+++ b/config/74/nginx.conf
@@ -1,3 +1,4 @@
+user www;
 worker_processes auto;
 error_log stderr warn;
 pid /run/nginx.pid;
@@ -19,7 +20,7 @@ http {
     access_log /dev/stdout main_timed;
     error_log /dev/stderr notice;
 
-    keepalive_timeout 65;
+    keepalive_timeout 3000;
 
     # Write temporary files to /tmp so they can be created as a non-privileged user
     client_body_temp_path /tmp/client_temp;
