--- a/config/74/fpm-pool.conf
+++ b/config/74/fpm-pool.conf
@@ -3,6 +3,10 @@
 error_log = /dev/stderr
 
 [www]
+
+user = www
+group = www
+
 ; The address on which to accept FastCGI requests.
 ; Valid syntaxes are:
 ;   'ip.add.re.ss:port'    - to listen on a TCP socket to a specific IPv4 address on
