--- a/Dockerfile.80
+++ b/Dockerfile.80
@@ -44,7 +44,7 @@ RUN apk add --no-cache \
 # Install XDebug
 
 # Create symlink so programs depending on `php` still function
-RUN ln -s /usr/bin/php8 /usr/bin/php
+RUN cp /usr/bin/php8 /usr/bin/php
 
 # Install Composer
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/bin --filename=composer
