chore: optimize performance

--- a/config/74/nginx.conf
+++ b/config/74/nginx.conf
@@ -36,6 +36,7 @@ http {
         server_name _;
 
         sendfile off;
+        tcp_nodelay on;
         absolute_redirect off;
 
         root /var/www/html/public;
