--- a/config/80/nginx.conf
+++ b/config/80/nginx.conf
@@ -1,3 +1,4 @@
+user www;
 worker_processes auto;
 error_log stderr warn;
 pid /run/nginx.pid;
@@ -35,6 +36,7 @@ http {
         server_name _;
 
         sendfile off;
+        tcp_nodelay on;
         absolute_redirect off;
 
         root /var/www/html/public;
