feat: add pgsql, sqlite extension

--- a/Dockerfile.74
+++ b/Dockerfile.74
@@ -31,6 +31,8 @@ RUN apk add --no-cache \
   php7-simplexml \
   php7-redis \
   php7-pdo_mysql \
+  php7-pdo_pgsql \
+  php7-pdo_sqlite \
   php7-soap \
   php7-pecl-apcu \
   php7-common \
