--- a/Dockerfile.80
+++ b/Dockerfile.80
@@ -31,6 +31,8 @@ RUN apk add --no-cache \
   php8-simplexml \
   php8-redis \
   php8-pdo_mysql \
+  php8-pdo_pgsql \
+  php8-pdo_sqlite \
   php8-soap \
   php8-pecl-apcu \
   php8-common \
