chore: hide server info for security hardening

--- a/config/74/php.ini
+++ b/config/74/php.ini
@@ -1,6 +1,7 @@
 date.timezone="UTC"
 display_errors=On
 log_errors=On
+expose_php=Off
 
 ; Maximum amount of memory a script may consume (128MB)
 ; http://php.net/memory-limit
