--- a/config/81/nginx.conf
+++ b/config/81/nginx.conf
@@ -85,7 +85,12 @@ http {
             fastcgi_pass unix:/run/php-fpm.sock;
         }
     }
-    
+
+    # Hardening
+    proxy_hide_header X-Powered-By;
+    server_tokens off;
+    fastcgi_hide_header X-Powered-By;
+
     gzip on;
     gzip_proxied any;
     gzip_types text/plain application/xml text/css text/js text/xml application/x-javascript text/javascript application/json application/xml+rss;
