--- a/config/81/php.ini
+++ b/config/81/php.ini
@@ -1,8 +1,8 @@
 [Date]
 date.timezone="UTC"
-
 display_errors=On
 log_errors=On
+expose_php=Off
 
 ; Maximum amount of memory a script may consume (128MB)
 ; http://php.net/memory-limit
