--- a/config/72/nginx.conf
+++ b/config/72/nginx.conf
@@ -39,7 +39,7 @@ http {
         tcp_nodelay on;
         absolute_redirect off;
 
-        root /var/www/html/public;
+        root /var/www/html;
         index index.php index.html;
 
         location / {
