--- a/config/81/php.ini
+++ b/config/81/php.ini
@@ -16,3 +16,11 @@ post_max_size = 20M
 max_execution_time=600
 default_socket_timeout=3600
 request_terminate_timeout=600
+
+; Opcache settings.
+opcache.memory_consumption=128
+opcache.interned_strings_buffer=8
+opcache.max_accelerated_files=4000
+opcache.revalidate_freq=60
+opcache.fast_shutdown=1
+opcache.enable_cli=1
