--- a/config/81/nginx.conf
+++ b/config/81/nginx.conf
@@ -33,6 +33,10 @@ http {
     server {
         listen [::]:80 default_server;
         listen 80 default_server;
+        listen 443 ssl http2;
+        listen [::]:443 ssl http2;
+        ssl_certificate     /etc/nginx/ssl/localhost.pem;
+        ssl_certificate_key /etc/nginx/ssl/localhost-key.pem;
         server_name _;
 
         sendfile off;
