--- a/config/74/fpm-pool.conf
+++ b/config/74/fpm-pool.conf
@@ -17,7 +17,7 @@ group = www
 ;                            (IPv6 and IPv4-mapped) on a specific port;
 ;   '/path/to/unix/socket' - to listen on a unix socket.
 ; Note: This value is mandatory.
-listen = /run/php-fpm.sock
+listen = 127.0.0.1:9000
 
 ; Enable status page
 pm.status_path = /fpm-status
