--- a/config/74/nginx.conf
+++ b/config/74/nginx.conf
@@ -20,7 +20,7 @@ http {
     access_log /dev/stdout main_timed;
     error_log /dev/stderr notice;
 
-    keepalive_timeout 3000;
+    keepalive_timeout 65;
 
     # Write temporary files to /tmp so they can be created as a non-privileged user
     client_body_temp_path /tmp/client_temp;
@@ -54,11 +54,11 @@ http {
             root /var/lib/nginx/html;
         }
 
-        # Pass the PHP scripts to PHP-FPM listening on php-fpm.sock
+        # Pass the PHP scripts to PHP-FPM listening on 127.0.0.1:9000
         location ~ \.php$ {
             try_files $uri =404;
             fastcgi_split_path_info ^(.+\.php)(/.+)$;
-            fastcgi_pass unix:/run/php-fpm.sock;
+            fastcgi_pass 127.0.0.1:9000;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
             fastcgi_param SCRIPT_NAME $fastcgi_script_name;
             fastcgi_index index.php;
@@ -82,7 +82,7 @@ http {
             deny all;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
             include fastcgi_params;
-            fastcgi_pass unix:/run/php-fpm.sock;
+            fastcgi_pass 127.0.0.1:9000;
         }
     }
 
