--- a/config/80/fpm-pool.conf
+++ b/config/80/fpm-pool.conf
@@ -3,6 +3,10 @@
 error_log = /dev/stderr
 
 [www]
+
+user = www
+group = www
+
 ; The address on which to accept FastCGI requests.
 ; Valid syntaxes are:
 ;   'ip.add.re.ss:port'    - to listen on a TCP socket to a specific IPv4 address on
@@ -13,7 +17,7 @@ error_log = /dev/stderr
 ;                            (IPv6 and IPv4-mapped) on a specific port;
 ;   '/path/to/unix/socket' - to listen on a unix socket.
 ; Note: This value is mandatory.
-listen = /run/php-fpm.sock
+listen = 127.0.0.1:9000
 
 ; Enable status page
 pm.status_path = /fpm-status
