--- a/config/80/nginx.conf
+++ b/config/80/nginx.conf
@@ -54,11 +54,11 @@ http {
             root /var/lib/nginx/html;
         }
 
-        # Pass the PHP scripts to PHP-FPM listening on php-fpm.sock
+        # Pass the PHP scripts to PHP-FPM listening on 127.0.0.1:9000
         location ~ \.php$ {
             try_files $uri =404;
             fastcgi_split_path_info ^(.+\.php)(/.+)$;
-            fastcgi_pass unix:/run/php-fpm.sock;
+            fastcgi_pass 127.0.0.1:9000;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
             fastcgi_param SCRIPT_NAME $fastcgi_script_name;
             fastcgi_index index.php;
@@ -82,7 +82,7 @@ http {
             deny all;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
             include fastcgi_params;
-            fastcgi_pass unix:/run/php-fpm.sock;
+            fastcgi_pass 127.0.0.1:9000;
         }
     }
 
