feat: add build for symfony 3 with php 7.4
Fix grep version, add node 10 to image

--- a/config/74/nginx.conf
+++ b/config/74/nginx.conf
@@ -33,13 +33,17 @@ http {
     server {
         listen [::]:80 default_server;
         listen 80 default_server;
+        listen 443 ssl http2;
+        listen [::]:443 ssl http2;
+        ssl_certificate     /etc/nginx/ssl/localhost.pem;
+        ssl_certificate_key /etc/nginx/ssl/localhost-key.pem;
         server_name _;
 
         sendfile off;
         tcp_nodelay on;
         absolute_redirect off;
 
-        root /var/www/html/public;
+        root /var/www/html/web;
         index index.php index.html;
 
         location / {
