--- a/build
+++ b/build
@@ -17,7 +17,13 @@ if [ $# -gt 0 ]; then
     echo "All done."
     exit 0
   fi
-  docker buildx build --no-cache -f "$1".Dockerfile . -t ${IMAGE}:"$1"
+  docker buildx build \
+    --platform linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6 \
+    --no-cache \
+    -f "$1".Dockerfile \
+    -t ${IMAGE}:"$1" \
+    --push \
+    .
 else
   echo "Nothing to build."
 fi
