--- a/config/81/php.ini
+++ b/config/81/php.ini
@@ -4,6 +4,9 @@ display_errors=On
 log_errors=On
 expose_php=Off
 
+; Redirect errors to the container stderr
+error_log = "/dev/stderr"
+
 ; Maximum amount of memory a script may consume (128MB)
 ; http://php.net/memory-limit
 memory_limit = 128M
