--- a/8.2/Dockerfile
+++ b/8.2/Dockerfile
@@ -40,26 +40,14 @@ RUN apk add --no-cache \
   nginx \
   runit
 
-# Install XDebug
-
 # Create symlink so programs depending on `php` still function
 RUN cp /usr/bin/php82 /usr/bin/php
 
 # Install Composer
 COPY --from=composer/composer:2-bin /composer /usr/bin/composer
 
-# Configure nginx - http
-COPY config/82/nginx.conf /etc/nginx/nginx.conf
-# Configure nginx - default server
-COPY config/82/conf.d /etc/nginx/conf.d/
-
-# Configure PHP-FPM
-ENV PHP_INI_DIR /etc/php82
-COPY config/82/fpm-pool.conf ${PHP_INI_DIR}/php-fpm.d/www.conf
-COPY config/82/php.ini ${PHP_INI_DIR}/conf.d/custom.ini
-
-# Configure runit boot script
-COPY config/82/boot.sh /sbin/boot.sh
+ADD rootfs /
+COPY boot.sh /sbin/boot.sh
 
 # Make sure files/folders needed by the processes are accessable when they run under the www user
 ARG nginxUID=1000
@@ -72,9 +60,6 @@ RUN adduser -D -u ${nginxUID} -g ${nginxGID} -s /bin/sh www && \
     chown -R www:www /run && \
     chown -R www:www /var/lib/nginx && \
     chown -R www:www /var/log/nginx
-
-COPY config/82/nginx.run /etc/service/nginx/run
-COPY config/82/php.run /etc/service/php/run
 
 RUN chmod +x /etc/service/nginx/run \
     && chmod +x /etc/service/php/run
