--- a/7.2/rootfs/etc/nginx/nginx.conf
+++ b/7.2/rootfs/etc/nginx/nginx.conf
@@ -34,12 +34,13 @@ http {
     server_tokens off;
     fastcgi_hide_header X-Powered-By;
 
+    # Enable gzip compression by default
     gzip on;
     gzip_proxied any;
     gzip_types text/plain application/xml text/css text/js text/xml application/x-javascript text/javascript application/json application/xml+rss;
     gzip_vary on;
     gzip_disable "msie6";
-    
-    # Include other server configs
+
+    # Include server configs
     include /etc/nginx/conf.d/*.conf;
 }
