--- a/8.1/Dockerfile
+++ b/8.1/Dockerfile
@@ -1,64 +1,53 @@
-ARG ALPINE_VERSION=3.8
+ARG ALPINE_VERSION=3.18
 FROM alpine:${ALPINE_VERSION}
 LABEL Maintainer="Ngoc Linh Pham <pnlinh1207@gmail.com>"
-LABEL Description="Lightweight container with Nginx 1.14 & PHP 7.2 based on Alpine Linux."
+LABEL Description="Lightweight container with Nginx 1.24 & PHP 8.1 based on Alpine Linux."
 
 # Setup document root
 WORKDIR /var/www/html
 
 # Install packages and remove default server definition
 RUN apk add --no-cache \
-  php7  \
-  php7-fpm  \
-  php7-bcmath  \
-  php7-ctype  \
-  php7-fileinfo \
-  php7-json  \
-  php7-mbstring  \
-  php7-openssl  \
-  php7-pdo_pgsql  \
-  php7-pdo_mysql \
-  php7-curl  \
-  php7-pdo  \
-  php7-tokenizer  \
-  php7-xml \
-  php7-phar \
-  php7-dom \
-  php7-gd \
-  php7-iconv \
-  php7-xmlwriter \
-  php7-xmlreader \
-  php7-zip \
-  php7-simplexml \
-  php7-session \
-  php7-pcntl \
-  php7-posix \
+  php81  \
+  php81-fpm  \
+  php81-bcmath  \
+  php81-ctype  \
+  php81-fileinfo \
+  php81-json  \
+  php81-mbstring  \
+  php81-openssl  \
+  php81-pdo_pgsql  \
+  php81-pdo_mysql \
+  php81-curl  \
+  php81-pdo  \
+  php81-tokenizer  \
+  php81-xml \
+  php81-phar \
+  php81-dom \
+  php81-gd \
+  php81-iconv \
+  php81-xmlwriter \
+  php81-xmlreader \
+  php81-zip \
+  php81-simplexml \
+  php81-session \
+  php81-opcache \
+  php81-gd \
+  php81-intl \
+  php81-pcntl \
+  php81-posix \
   curl \
   nginx \
   runit
 
-# Install XDebug
-
 # Create symlink so programs depending on `php` still function
-RUN cp /usr/bin/php7 /usr/bin/php
+RUN cp /usr/bin/php81 /usr/bin/php
 
 # Install Composer
 COPY --from=composer/composer:2-bin /composer /usr/bin/composer
 
-# Configure nginx - http
-COPY config/72/nginx.conf /etc/nginx/nginx.conf
-# Configure nginx - default server
-COPY config/72/conf.d /etc/nginx/conf.d/
-
-# Remove default server definition
-RUN rm /etc/nginx/conf.d/default.conf
-
-# Configure PHP-FPM
-COPY config/72/fpm-pool.conf /etc/php7/php-fpm.d/www.conf
-COPY config/72/php.ini /etc/php7/conf.d/custom.ini
-
-# Configure runit boot script
-COPY config/72/boot.sh /sbin/boot.sh
+ADD rootfs /
+COPY boot.sh /sbin/boot.sh
 
 # Make sure files/folders needed by the processes are accessable when they run under the www user
 ARG nginxUID=1000
@@ -71,9 +60,6 @@ RUN adduser -D -u ${nginxUID} -g ${nginxGID} -s /bin/sh www && \
     chown -R www:www /run && \
     chown -R www:www /var/lib/nginx && \
     chown -R www:www /var/log/nginx
-
-COPY config/72/nginx.run /etc/service/nginx/run
-COPY config/72/php.run /etc/service/php/run
 
 RUN chmod +x /etc/service/nginx/run \
     && chmod +x /etc/service/php/run
