chore: disable nginx static cache

--- a/nginx-ssl.conf
+++ b/nginx-ssl.conf
@@ -46,7 +46,7 @@ server {
 
     # Set the cache-control headers on assets to cache for 5 days
     location ~* \.(jpg|jpeg|gif|png|css|js|ico|xml)$ {
-        expires 5d;
+        expires off;
     }
 
     # Deny access to . files, for security
