--- a/8.0/Dockerfile
+++ b/8.0/Dockerfile
@@ -74,4 +74,4 @@ EXPOSE 80
 CMD ["sh", "/sbin/boot.sh"]
 
 # Configure a healthcheck to validate that everything is up & running
-HEALTHCHECK --timeout=10s CMD curl --silent --fail http://127.0.0.1:80/fpm-ping
+HEALTHCHECK --timeout=10s CMD curl --silent --fail http://127.0.0.1:80/fpm-ping || exit 1
