--- a/7.4/rootfs/etc/php74/conf.d/custom.ini
+++ b/7.4/rootfs/etc/php74/conf.d/custom.ini
@@ -19,3 +19,5 @@ post_max_size = 20M
 max_execution_time=600
 default_socket_timeout=3600
 request_terminate_timeout=600
+; How many GET/POST/COOKIE input variables may be accepted
+max_input_vars = 2000
