chore: re-enable image pushing in GitHub workflow

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -32,6 +32,6 @@ jobs:
         run: |-
           make test-all
 
-#      - name: Push image
-#        run: |-
-#          make release-all
+      - name: Push image
+        run: |-
+          make release-all
