chore: update GitHub workflow to use Makefile target for releasing to GHCR

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -43,4 +43,4 @@ jobs:
 
       - name: Push image to GitHub Container Registry
         run: |-
-          release-all-to-ghcr
+          make release-all-to-ghcr
